[package]
name = "restd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
# Core revm dependencies
revm = "14.0.0"
alloy-primitives = "0.8.0"

# Alloy dependencies for Solidity integration
alloy-sol-types = "0.8.0"
alloy-dyn-abi = "0.8.0"
# Note: Using minimal dependencies to avoid version conflicts

# Async and logging for plugin system
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
